result page is added

--- a/end.html
+++ b/end.html
@@ -10,7 +10,7 @@
  <div class="container">
     <div class="flex-center flex-column">
         <h1  id="finalScore"></h1>
-        <div class="btn" id="viewQA">View QA</div>
+        <a href="/resultPage.html" class="btn" id="viewQA">View QA</a>
         <a href="/quiz.app.html" class="btn">PLAY AGAIN</a>
     </div>
  </div>
