--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div id="home" class="flex-center flex-column">
             <h1>Quick Quiz</h1>
             <a href="/quiz.app.html" class="btn">Play</a>
-            <a href="/highScores.html" class="btn">High Scores</a>
+            <!-- <a href="/highScores.html" class="btn">High Scores</a> -->
         </div>
     </div>
 </body>
